; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/cs5535audio/extr_cs5535audio_pcm.c_cs5535audio_clear_dma_packets.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/cs5535audio/extr_cs5535audio_pcm.c_cs5535audio_clear_dma_packets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs5535audio = type { i32 }
%struct.cs5535audio_dma = type { i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }
%struct.snd_pcm_substream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cs5535audio*, %struct.cs5535audio_dma*, %struct.snd_pcm_substream*)* @cs5535audio_clear_dma_packets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cs5535audio_clear_dma_packets(%struct.cs5535audio* %0, %struct.cs5535audio_dma* %1, %struct.snd_pcm_substream* %2) #0 {
  %4 = alloca %struct.cs5535audio*, align 8
  %5 = alloca %struct.cs5535audio_dma*, align 8
  %6 = alloca %struct.snd_pcm_substream*, align 8
  store %struct.cs5535audio* %0, %struct.cs5535audio** %4, align 8
  store %struct.cs5535audio_dma* %1, %struct.cs5535audio_dma** %5, align 8
  store %struct.snd_pcm_substream* %2, %struct.snd_pcm_substream** %6, align 8
  %7 = load %struct.cs5535audio_dma*, %struct.cs5535audio_dma** %5, align 8
  %8 = getelementptr inbounds %struct.cs5535audio_dma, %struct.cs5535audio_dma* %7, i32 0, i32 1
  %9 = call i32 @snd_dma_free_pages(%struct.TYPE_2__* %8)
  %10 = load %struct.cs5535audio_dma*, %struct.cs5535audio_dma** %5, align 8
  %11 = getelementptr inbounds %struct.cs5535audio_dma, %struct.cs5535audio_dma* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  %13 = load %struct.cs5535audio_dma*, %struct.cs5535audio_dma** %5, align 8
  %14 = getelementptr inbounds %struct.cs5535audio_dma, %struct.cs5535audio_dma* %13, i32 0, i32 0
  store i32* null, i32** %14, align 8
  ret void
}

declare dso_local i32 @snd_dma_free_pages(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
